--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Tutroial</title>
+    <title>Learning JS</title>
+    <link rel="stylesheet" href="/styles/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/js.css">
 </head>
+
 <body>
-    
+    <div class="mb-5 h1 text-danger text-center mt-4">My First Javascript Project</div>
+    <div class="d-flex ">
+        <button type="button" onclick="displayDate()" class="text-white">click me</button>
+    </div>
+    <div id="dat" class="text-center text-danger h6 mb-5"></div>
+
+    <ul class="mb-5 text-center text-white">
+        <li class="h5">Username: <span id="uname"></span></li>
+        <li class="h5">Adddress: <span id="add"></span> </li>
+        <li class="h5">Age: <span id="age"></span> </li>
+    </ul>
+    <h1 class="text-center text-white mb-4">Click on the button to see how many second are there in a week</h1>
+    <table class="d-flex  mb-5">
+        <tr class="d-flex mt-5">
+            <th>Time</th>
+            <th>Second</th>
+        </tr>
+        <tr class="d-flex">
+            <td id="minute">1min</td>
+            <td id="second">60s</td>
+        </tr>
+    </table>
+    <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2">Try ME Out to change</button></div>
+
     <script src="/styles/js/function.js"></script>
+    <script src="/styles/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
