added readme file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <td id="second">60s</td>
         </tr>
     </table>
-    <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2">Try ME Out to change</button></div>
+    <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2 text-white">Try ME Out to change</button></div>
 
     <script src="/styles/js/function.js"></script>
     <script src="/styles/js/bootstrap.bundle.js"></script>
