finished number assignment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="mb-5 h1 text-danger text-center mt-4">My First Javascript Project</div>
+    <!-- <div class="mb-5 h1 text-danger text-center mt-4">My First Javascript Project</div>
     <div class="d-flex ">
         <button type="button" onclick="displayDate()" class="text-white">click me</button>
     </div>
@@ -33,7 +33,24 @@
             <td id="second">60s</td>
         </tr>
     </table>
-    <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2 text-white">Try ME Out to change</button></div>
+    <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2 text-white">Try ME Out to change</button></div> -->
+
+    <h3 class="text-center">Classwork java</h3>
+    <h1 class="text-center">Questions</h1>
+    <div class="container">
+        <div class="h5"><b class="h3">1.</b>Three friends went to eat in a resturant and the their total bill was
+            N10,000. Write a program with javascript to calculate how much each of
+            them would pay if they are to leave 30% to their total bill.</div>
+        <div style="border-bottom: 1px solid;" class="mb-2 h2 py-4">Solution:  </div>
+        <div class="pt-3 h4">Fixed Total Expendiure: <span id="hood"></span></div>
+        <div class="h4">Tip Discount: <span id="diss"></span></div>
+        <div class="h4">Number of friends: <span id="frid"></span> </div>
+        <div class="h4">Total Expendiure with the discount: <span id="done"></span> </div>
+
+        <div class="">
+
+        </div>
+    </div>
 
     <script src="/styles/js/function.js"></script>
     <script src="/styles/js/bootstrap.bundle.js"></script>
