finished the assignment

--- a/index.html
+++ b/index.html
@@ -41,15 +41,23 @@
         <div class="h5"><b class="h3">1.</b>Three friends went to eat in a resturant and the their total bill was
             N10,000. Write a program with javascript to calculate how much each of
             them would pay if they are to leave 30% to their total bill.</div>
-        <div style="border-bottom: 1px solid;" class="mb-2 h2 py-4">Solution:  </div>
+        <div style="border-bottom: 1px solid;" class="mb-2 h2 py-4">Solution: </div>
         <div class="pt-3 h4">Fixed Total Expendiure: <span id="hood"></span></div>
         <div class="h4">Tip Discount: <span id="diss"></span></div>
         <div class="h4">Number of friends: <span id="frid"></span> </div>
         <div class="h4">Total Expendiure with the discount: <span id="done"></span> </div>
 
-        <div class="">
-
+        <div class=" mt-5 h5">
+            <b class="h3">2.</b> A store is making discount on sales, write a program to ask a user how much
+            his or her purchase is. If the user purchase price is less than N2000 then
+            the user should have 10% discount on his / her purchase, if the user purchase
+            price is between N2000 and N5000 then the user should have 20% discount and if
+            the purchase if above N5000 then the user should have 30% discount.
         </div>
+        <div style="border-bottom: 1px solid;" class="mb-2 h2 py-4">Solution: </div>
+        <div class="mb-2 h4 py-4">Current Purchase Price = <span id="purd"></span></div>
+        <div class="mb-2 h4 py-4">Discount on Purchase = <span id="dis"></span></div>
+        <div class="mb-2 h4 py-4">New Discount Price = <span id="pri"></span></div>
     </div>
 
     <script src="/styles/js/function.js"></script>
