--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
         <div style="border-bottom: 1px solid;" class="mb-2 h2 py-4">Solution: </div>
         <div class="mb-2 h4 py-4">Current Purchase Price = <span id="purd"></span></div>
+        <div id="dos" class="mb-2 h4 py-4"></div>
         <div class="mb-2 h4 py-4">Discount on Purchase = <span id="dis"></span></div>
         <div class="mb-2 h4 py-4">New Discount Price = <span id="pri"></span></div>
     </div>
