--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </table>
     <div class="text-center mb-5"><button id="myBtn" type="button" onclick="myBtn()" class="button2 text-white">Try ME Out to change</button></div> -->
 
-    <h3 class="text-center">Classwork java</h3>
+    <h3 class="text-center">Classwork javascript</h3>
     <h1 class="text-center">Questions</h1>
     <div class="container">
         <div class="h5"><b class="h3">1.</b>Three friends went to eat in a resturant and the their total bill was
